Added docker & setup redis rate limit
